<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">煤矿隐患排查</string>
    <string name="home">主页</string>
    <string name="inspection">巡检</string>
    <string name="guapai">挂牌督办</string>
    <string name="record_tracking">记录跟踪</string>
    <string name="statistical_analysis">统计分析</string>
    <string name="hiddenredord">隐患记录管理</string>
    <string name="moments">朋友圈</string>
    <string name="me">我的</string>
    <string name="change_password">修改密码</string>
    <string name="version">版本</string>
    <string name="log_ble_sdk">轨迹跟踪</string>
    <string name="log_out">退出登录</string>
    <string name="date_update">基础数据更新</string>
    <string name="identification_evaluation_statistics">辨识评估统计</string>
    <string name="monthly_hidden_statistics">当月隐患统计</string>
    <string name="annual_assessment">• 年度评估&#160;&#160;</string>
    <string name="special_assessment">• 专项评估&#160;&#160;</string>
    <string name="the_hidden_danger_that_already_eliminated_recently">• 已销号&#160;&#160;</string>
    <string name="anticipated_pitfalls">• 逾期的&#160;&#160;</string>
    <string name="unchange">• 整改中&#160;&#160;</string>
    <string name="for_acceptance">• 待验收&#160;&#160;</string>
    <string name="hidden_units">隐患单位</string>
    <string name="processed">已处理</string>
    <string name="untreated">未处理</string>
    <string name="more">更多</string>
    <string name="detail">详情</string>
    <string name="time_or_order">时间/班次</string>
    <string name="hidden_content">隐患内容</string>
    <string name="hidden_danger_belongs">检查单位</string>
    <string name="hidden_danger_details_management">隐患详情管理</string>
    <string name="guapai_details_management">督办隐患详情管理</string>
    <string name="hidden_danger_record_management">隐患记录管理</string>
    <string name="hidden_danger_every_unit">各单位隐患</string>
    <string name="hidden_danger_management">隐患下达管理</string>
    <string name="hidden_danger_rectification_management">隐患整改管理</string>
    <string name="hidden_danger_tracking_management">隐患跟踪管理</string>
    <string name="risk_overdue_management">隐患逾期管理</string>
    <string name="hidden_danger_review_management">隐患验收管理</string>
    <string name="area">区域</string>
    <string name="specialty">专业</string>
    <string name="category">级别</string>
    <string name="supervise">挂牌</string>
    <string name="check">验收</string>
    <string name="table_of_hidden_danger_processing_statistics">隐患处理情况图表统计图</string>
    <string name="hidden_danger_handling_icon_statistics">隐患处理图标统计</string>

    <string name="hidden_danger_statistics_of_each_unit">各单位隐患统计</string>
    <string name="summary_of_hazards">隐患汇总表</string>
    <string name="hazard_query_statistics">隐患查询统计</string>
    <string name="the_hidden_danger_record_has_been_deleted">已删除隐患记录</string>
    <string name="duplicate_hazard_record">重复隐患记录</string>
    <string name="chart_analysis_of_hazard_handling_unit">隐患处理单位图表分析</string>
    <string name="chart_analysis_of_hazard_handling">隐患处理图表分析</string>
    <string name="chart_analysis_of_hazard_year">隐患年度图表分析</string>
    <string name="finish_time">完成时间</string>
    <string name="department" tools:ignore="ExtraTranslation">整改单位</string>
    <string name="headquarters">队组</string>
    <string name="principal">负责人</string>
    <string name="measure">措施</string>
    <string name="capital">资金</string>
    <string name="the_rectification_plan">整\n改\n计\n划</string>
    <string name="acceptance_of_the_situation">验\n收\n情\n况</string>
    <string name="to_carry_out_the_people">落实人</string>
    <string name="acceptance_of_the_people">验收人</string>
    <string name="acceptance_of_the_results">验收结果</string>
    <string name="check_space">验\t\t收</string>
    <string name="five_set">五\t\t定</string>
    <string name="re_release">重新下达</string>
    <string name="rectification">整\t\t改</string>
    <string name="the_number_of_processing">处理人数</string>
    <string name="the_rectification_results">整改结果</string>
    <string name="your_current_password">当前密码</string>
    <string name="the_new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="confirm_the_change">确认修改</string>
    <string name="nickname">姓名</string>
    <string name="head_portrait">头像</string>
    <string name="phone_number">手机号</string>
    <string name="position">职位</string>
    <string name="person_info">个人信息</string>
    <string name="tracking_unit">跟踪人单位</string>
    <string name="track_people">跟踪人</string>
    <string name="department_group" tools:ignore="ExtraTranslation">部门/队组</string>
    <string name="handler">处理人</string>
    <string name="detail_backspace">详\t\t情</string>
    <string name="add_backspace">添\t\t加</string>
    <string name="add">添加</string>
    <string name="addguapai">挂牌</string>
    <string name="ok_backspace">确\t\t定</string>
    <string name="accredit_backspace">授\t\t权</string>
    <string name="hang_backspace">挂\t\t牌</string>
    <string name="modification">修改</string>
    <string name="modification_backspace">修\t\t改</string>
    <string name="delete">删除</string>
    <string name="delete_backspace">删\t\t除</string>
    <string name="inspection_backspace">巡\t\t检</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="hidden_units_colon">隐患单位：</string>


</resources>
