<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="14dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/blue_rectangle_white_stroke_4dp_corner"
    android:elevation="@dimen/elevation_basic">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_marginTop="0.67dp"
        android:layout_marginRight="0.67dp"
        android:layout_gravity="right"
        android:src="@drawable/layerlist_folding_corner"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="9dp"
        android:paddingRight="9dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hidden_content"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />

            <TextView
                android:id="@+id/tv_hidden_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="@color/white" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/area"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


            <TextView
                android:id="@+id/tv_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/processed"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="@color/white" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/specialty"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


            <TextView
                android:id="@+id/tv_specialty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/processed"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="@color/white" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time_or_order"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


            <TextView
                android:id="@+id/tv_time_or_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="@color/white" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/processed"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="@color/white" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/supervise"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />

            <TextView
                android:id="@+id/tv_supervise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_ts" />


        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="@color/white" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/click_more"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/button"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:background="@drawable/layerlist_login_button_bg"
                android:gravity="center"
                android:text="@string/check"
                android:textColor="@color/blue1"
                android:textSize="@dimen/normal_ts" />


        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</FrameLayout>