<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bar_color"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <include layout="@layout/layout_title" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.67dp"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

           <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/your_current_password"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/normal_ts" />

            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="请输入当前密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/normal_ts" />
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="7.33dp"
            android:layout_marginLeft="7.33dp"
            android:background="@color/colorDevide" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/the_new_password"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/normal_ts" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="请输入新密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/normal_ts" />
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="7.33dp"
            android:layout_marginRight="7.33dp"
            android:background="@color/colorDevide" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/confirm_new_password"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/normal_ts" />

            <EditText
                android:id="@+id/et_new_password_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="请再次输入新密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/normal_ts" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_ts"
        android:text="@string/confirm_the_change"
        android:layout_marginRight="40dp"
        android:background="@drawable/blue_rectangle_white_stroke_4dp_corner" />

</android.support.v7.widget.LinearLayoutCompat>